update markdown structure
